--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "connected-react-router": "^6.9.1",
     "google-maps-react": "^2.0.6",
     "local-storage": "^2.0.0",
@@ -22,7 +24,9 @@
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
+    "react-select": "^4.2.1",
     "react-spring": "^8.0.27",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-persist": "^6.0.0",
